Revision history for Plack-Middleware-Rewrite

1.008 Fri 28 Feb 2014
	- Fix XSS test

1.007 Tue 12 Feb 2013
	- Include a body in middleware-generated redirect responses

1.006 Thu 27 Dec 2012
	- Fixed buggy interaction with streaming

1.005 Thu 07 Jun 2012
	- Preserve pre-existing Location header in fabricated responses

1.004 Thu 29 Mar 2012
	- Preserve query params in external redirects by dropping unnecessary use of URI
	  (with thanks to Wallace Reis)

1.003 Tue 01 Mar 2011
	- Declare dependecy on Plack 0.9942. No functional changes.

1.002 Fri 18 Feb 2011
	- Switched to using `response_cb`.

1.001 Thu 17 Feb 2011
	- Declared dependencies. No functional changes.

1.0 Wed 16 Feb 2011
	- Initial release.